--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ numpy==1.26.2
 # Testing
 pytest==7.4.3
 pytest-cov==4.1.0
+responses>=0.23.1
 
 # Logging
 loguru==0.7.2
@@ -19,6 +20,12 @@ psycopg2-binary==2.9.10
 sqlalchemy==2.0.35
 
 # ML
-scikit-learn==1.3.2
-scipy==1.11.4
+scikit-learn==1.5.0
+scipy==1.14.0
 numpy==1.26.2
+
+# API
+fastapi==0.108.0
+uvicorn[standard]==0.25.0
+pydantic==2.5.3
+httpx==0.25.2
